--- a/index-backup.html
+++ b/index-backup.html
@@ -19,10 +19,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Bienvenido</a></li>
-							<li><a href="#one">Quien soy</a></li>
-							<li><a href="#two">Habilidades</a></li>
-							<li><a href="#three">Contacto</a></li>
+							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#one">Who we are</a></li>
+							<li><a href="#two">What we do</a></li>
+							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,8 +34,9 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Portafolio de Alvaro</h1>
-							<p>Desarrollador Backend especializado en datos</p>
+							<h1>Hyperspace</h1>
+							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
+							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -45,37 +46,37 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/api.png" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Web App & API Development</h2>
-									<p>He desarrollado diversas aplicaciones Web y APIs para mis clientes. En frameworks
-										como Django, Flask o FastAPI.
-									</p>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/da.png" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Data Operations</h2>
-									<p>Desde modelado, ETL, análisis y visualización de datos han sido tareas que he desarrollado
-										en diferentes entornos. SQL, Pandas, Matplotlib, PowerBI o Tableau
-									</p>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/github.png" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Portafolio en GitHub</h2>
-									<p>Puedes ver mis repositorios públicos en GitHub donde se encuentran distintos scripts y proyectos
-										que he desarrollado
-									</p>
+									<h2>Sed ipsum dolor</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/Thebishopp?tab=repositories" class="button">Github Público</a></li>
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Feugiat consequat</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Ultricies aliquam</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -148,21 +149,25 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="mailto:alvaroboineau94@gmail.com" class="button submit">Enviar Correo</a></li>
+											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Ubicación</h3>
-											<span>Capital Federal,<br />
-											Argentina<br />
-											</span>
+											<h3>Address</h3>
+											<span>12345 Somewhere Road #654<br />
+											Nashville, TN 00000-0000<br />
+											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">alvaroboineau94@gmail.com</a>
+											<a href="#">user@untitled.tld</a>
+										</li>
+										<li>
+											<h3>Phone</h3>
+											<span>(000) 000-0000</span>
 										</li>
 										<li>
 											<h3>Social</h3>
