--- a/main-es.html
+++ b/main-es.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<script src="https://kit.fontawesome.com/e940384ad7.js" crossorigin="anonymous"></script>
 		<title>Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -35,9 +36,9 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Portafolio de Alvaro</h1>
-							<p>Desarrollador Backend especializado en datos</p>
+							<p>Data Developer</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Saber Mas</a></li>
 							</ul>
 						</div>
 					</section>
@@ -45,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/api.png" alt="" data-position="center center" /></a>
+							<a class="image"><img src="images/api.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Web App & API Development</h2>
@@ -56,7 +57,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/da.png" alt="" data-position="top center" /></a>
+							<a class="image"><img src="images/da.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Data Operations</h2>
@@ -67,7 +68,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/github.png" alt="" data-position="25% 25%" /></a>
+							<a class="image"><img src="images/github.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Portafolio en GitHub</h2>
@@ -75,7 +76,7 @@
 										que he desarrollado
 									</p>
 									<ul class="actions">
-										<li><a href="https://github.com/Thebishopp?tab=repositories" class="button">Github Público</a></li>
+										<li><a href="https://github.com/Thebishopp?tab=repositories" target="_blank" class="button">Github Público</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,53 +87,50 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Habilidades</h2>
+							<p>Aqui estan mis principales habilidades y conocimientos técnicos que he adquirido en los proyectos que he trabajado</p>
+							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
+									<span class= "fa-brands fa-python fa-2xl"></span>
 									<h3>Python</h3>
-									<p>Manipulación de datos, automatización y performance. Programación Funcional y OOP. Librerias: Pandas, SQLAlchemy, Django, Matplotlib, Dash</p>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Programación funcional y OOP. Librerias Pandas, SQLalchemy, Matplotlib, Dash, Django, Flask entre otras.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<i class="fa-solid fa-database fa-2xl"></i>	
+									<h3>SQL</h3>
+									<p>Experiencia con tareas DDL y DML en plataformas como MSSQL, Oracle, Access, PostgreSQL y MySQL</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<i class="fa-solid fa-code fa-2xl"></i>
+									<h3>HTML/CSS/Javascript</h3>
+									<p>Desarrollo básico de frontend. Integración con Python para realizar webs dinámicas</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<i class="fa-brands fa-linux fa-2xl"></i>
+									<h3>Linux</h3>
+									<p>Experiencia utilizando Ubuntu, Kubernetes y Docker</p>
 								</section>
 								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<i class="fa-solid fa-cloud-arrow-up fa-2xl"></i>
+									<h3>Openshift Deploy</h3>
+									<p>Deploy de aplicaciones en contenedores en Openshift en entorno de desarollo</p>
 								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
-						</div>
+								<section>
+									<i class="fa fa-sitemap fa-2xl"></i>
+									<h3>ETL</h3>
+									<p>Desarrollo de procesos de ETL en Python y DataStage</p>
+								</section>
 					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Contacto</h2>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
-												<label for="name">Name</label>
+												<label for="name">Nombre</label>
 												<input type="text" name="name" id="name" />
 											</div>
 											<div class="field half">
@@ -140,39 +138,32 @@
 												<input type="text" name="email" id="email" />
 											</div>
 											<div class="field">
-												<label for="message">Message</label>
+												<label for="message">Mensaje</label>
 												<textarea name="message" id="message" rows="5"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="mailto:alvaroboineau94@gmail.com" class="button submit">Enviar Correo</a></li>
 										</ul>
 									</form>
 								</section>
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<h3>Ubicación</h3>
+											<span>Capital Federal,<br />
+											Argentina<br />
+											</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<a href="mailto:alvaroboineau94@gmail.com">alvaroboineau94@gmail.com</a>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/Thebishopp" target="_blank"  class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/alvaroboineau/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -187,7 +178,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Alvaro Boineau. All rights reserved.</li><li>Design by: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
