--- a/main-en.html
+++ b/main-en.html
@@ -20,10 +20,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Bienvenido</a></li>
-							<li><a href="#one">Quien soy</a></li>
-							<li><a href="#two">Habilidades</a></li>
-							<li><a href="#three">Contacto</a></li>
+							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#one">Who I Am</a></li>
+							<li><a href="#two">Skills</a></li>
+							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -35,10 +35,10 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Portafolio de Alvaro</h1>
+							<h1>Alvaro's Portfolio</h1>
 							<p>Data Developer</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Saber Mas</a></li>
+								<li><a href="#one" class="button scrolly">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
@@ -50,8 +50,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Web App & API Development</h2>
-									<p>He desarrollado diversas aplicaciones Web y APIs para mis clientes. En frameworks
-										como Django, Flask o FastAPI.
+									<p>I've developed a diverse set of webs apps and APIs for my clients. In frameworks
+									such as Django, Flask or FastAPI
 									</p>
 								</div>
 							</div>
@@ -61,8 +61,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Data Operations</h2>
-									<p>Desde modelado, ETL, análisis y visualización de datos han sido tareas que he desarrollado
-										en diferentes entornos. SQL, Pandas, Matplotlib, PowerBI o Tableau
+									<p>I've worked on various tasks around the complete data life-cycle. Like Data Modeling,
+										ETL, analysis and DataViz in various tools, like SQL, Pandas, Matplotlib, PowerBI or Tableau
 									</p>
 								</div>
 							</div>
@@ -71,9 +71,9 @@
 							<a class="image"><img src="images/github.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Portafolio en GitHub</h2>
-									<p>Puedes ver mis repositorios públicos en GitHub donde se encuentran distintos scripts y proyectos
-										que he desarrollado
+									<h2>GitHub Portfolio</h2>
+										<p>You can review my public repositories on my GitHub profile, where several scripts and projects are found   
+										that I've developed in the past.
 									</p>
 									<ul class="actions">
 										<li><a href="https://github.com/Thebishopp?tab=repositories" target="_blank" class="button">Github Público</a></li>
@@ -86,51 +86,51 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Habilidades</h2>
-							<p>Aqui estan mis principales habilidades y conocimientos técnicos que he adquirido en los proyectos que he trabajado</p>
+							<h2>Skills</h2>
+							<p>Here there are my core skills and technicals knowledge that I've learned</p>
 							<div class="features">
 								<section>
 									<span class= "fa-brands fa-python fa-2xl"></span>
 									<h3>Python</h3>
-									<p>Programación funcional y OOP. Librerias Pandas, SQLalchemy, Matplotlib, Dash, Django, Flask entre otras.</p>
+									<p>Fuctional & OOP. Libraries and frameworks like Pandas, SQLalchemy, Matplotlib, Dash, Django, Flask</p>
 								</section>
 								<section>
 									<i class="fa-solid fa-database fa-2xl"></i>	
 									<h3>SQL</h3>
-									<p>Experiencia con tareas DDL y DML en plataformas como MSSQL, Oracle, Access, PostgreSQL y MySQL</p>
+									<p>Experience in DDL and DML tasks on plataforms like MSSQL, Oracle, Access, PostgreSQL and MySQL</p>
 								</section>
 								<section>
 									<i class="fa-solid fa-code fa-2xl"></i>
 									<h3>HTML/CSS/Javascript</h3>
-									<p>Desarrollo básico de frontend. Integración con Python para realizar webs dinámicas</p>
+									<p>Basic frontend development. Integration with Python to develop dynamic webs</p>
 								</section>
 								<section>
 									<i class="fa-brands fa-linux fa-2xl"></i>
 									<h3>Linux</h3>
-									<p>Experiencia utilizando Ubuntu, Kubernetes y Docker</p>
+									<p>Experience with Ubuntu, Kubernetes and Docker</p>
 								</section>
 								<section>
 									<i class="fa-solid fa-cloud-arrow-up fa-2xl"></i>
 									<h3>Openshift Deploy</h3>
-									<p>Deploy de aplicaciones en contenedores en Openshift en entorno de desarollo</p>
+									<p>Deploy of apps in Openshift's containers in a development environment</p>
 								</section>
 								<section>
 									<i class="fa fa-sitemap fa-2xl"></i>
 									<h3>ETL</h3>
-									<p>Desarrollo de procesos de ETL en Python y DataStage</p>
+									<p>Developement of ETL processes on Python and DataStage</p>
 								</section>
 					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Contacto</h2>
+							<h2>Contact</h2>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
-												<label for="name">Nombre</label>
+												<label for="name">Name</label>
 												<input type="text" name="name" id="name" />
 											</div>
 											<div class="field half">
@@ -138,19 +138,19 @@
 												<input type="text" name="email" id="email" />
 											</div>
 											<div class="field">
-												<label for="message">Mensaje</label>
+												<label for="message">Message</label>
 												<textarea name="message" id="message" rows="5"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="mailto:alvaroboineau94@gmail.com" class="button submit">Enviar Correo</a></li>
+											<li><a href="mailto:alvaroboineau94@gmail.com" class="button submit">Submit</a></li>
 										</ul>
 									</form>
 								</section>
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Ubicación</h3>
+											<h3>Location</h3>
 											<span>Capital Federal,<br />
 											Argentina<br />
 											</span>
