--- a/main-es.html
+++ b/main-es.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<script src="https://kit.fontawesome.com/e940384ad7.js" crossorigin="anonymous"></script>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Portafolio de Alvaro</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
